// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachments renders attachments 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "attachments.add-btn",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <Component
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={
        Array [
          Object {
            "data": Object {
              "content-type": "application/document",
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "hidden": false,
              "id": "1",
              "lock_at": null,
              "locked": false,
              "mime_class": "document",
              "parent_folder_id": null,
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "unlock_at": null,
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
              "usage_rights": Object {
                "legal_copyright": "",
                "use_justification": "own_copyright",
              },
            },
            "error": null,
            "fileID": "1",
            "id": "1",
            "index": 0,
            "progress": Object {
              "loaded": 0,
              "total": 0,
            },
          },
          Object {
            "data": Object {
              "content-type": "application/document",
              "display_name": "Book Report",
              "filename": "Attachment 1.jpg",
              "hidden": false,
              "id": "2",
              "lock_at": null,
              "locked": false,
              "mime_class": "document",
              "parent_folder_id": null,
              "preview_url": "/",
              "size": 488212,
              "thumbnail_url": "http://fillmurray.com/322/200",
              "unlock_at": null,
              "uri": "file://somewhere/on/disk.jpg",
              "url": "http://canvaslms.com/bookreport",
              "usage_rights": Object {
                "legal_copyright": "",
                "use_justification": "own_copyright",
              },
            },
            "error": null,
            "fileID": "2",
            "id": "2",
            "index": 1,
            "progress": Object {
              "loaded": 0,
              "total": 0,
            },
          },
        ]
      }
      keyExtractor={[Function]}
      renderItem={[Function]}
      testID="attachments.list.list"
    />
    <AttachmentPicker
      fileTypes={
        Array [
          "all",
        ]
      }
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      userFiles={false}
    />
  </View>
</Screen>
`;

exports[`Attachments renders empty state 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "attachments.dismiss-btn",
        "title": "Done",
      },
    ]
  }
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Add attachment",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "attachments.add-btn",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Attachments"
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 49,
      }
    }
  >
    <Component
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={[Function]}
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      testID="attachments.list.list"
    />
    <AttachmentPicker
      fileTypes={
        Array [
          "all",
        ]
      }
      navigator={
        Object {
          "dismiss": [Function],
          "dismissAllModals": [Function],
          "isModal": false,
          "pop": [Function],
          "show": [Function],
          "traitCollection": [Function],
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      userFiles={false}
    />
  </View>
</Screen>
`;
